<resources>
    <string name="app_name">SecondProject</string>
    <string name="tab_text_1">Contacts</string>
    <string name="tab_text_2">Gallery</string>
    <string name="tab_text_3">ToDos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="go_login">Already a member? Login</string>
    <string name="no_contact"> Nothing to Get </string>
    <string name="no_todo"> You have nothing todo!! </string>


    <string name="add_button">Add</string>
    <string name="name">Name</string>
    <string name="back_to_contacts">Go back to contacts</string>

    <string name="phone_num">Phone Number</string>


</resources>
