<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".add_contact">
    <ImageView
        android:id="@+id/image_insert"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/img_df_1" />
<EditText
    android:id="@+id/add_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/name"
    android:inputType="textPersonName" />
<EditText
    android:id="@+id/add_phone_num"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:hint="@string/phone_num"
    android:ems="10"
    android:inputType="phone" />

<Button
    android:id="@+id/add_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:text="@string/add_button" />

<TextView
    android:id="@+id/back_to_contacts"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:text="@string/back_to_contacts"
    android:textSize="15sp" />

</LinearLayout>